--- a/sass/_shop.scss
+++ b/sass/_shop.scss
@@ -70,14 +70,16 @@
 }
 
 #cart-list{
-    width: 100vw;
+    width: 30vw;
     @include column;
     align-items: flex-end;
+    float: right;
     padding: 1rem;
     background-color: $color-primary;
     .cart-item{
         @include row;
         list-style: none;
+        padding: 0.5rem;
         img{
             width: 50px;
             height: 50px;
